--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* General Styles */
+<meta name="google-site-verification" content="k5mVg1y-Vj4Uk7mMD-kac-QBh_EWhrkp4KNEfuioBrk" />
+
+
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
