--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* General Styles */
 <meta name="google-site-verification" content="k5mVg1y-Vj4Uk7mMD-kac-QBh_EWhrkp4KNEfuioBrk" />
+<meta name="description" content="An academic website about me, my accomplishments, and resources.">
+<meta name="keywords" content="Uddipa, Academic Website, Math, Physics, Chess, Dance">
+<meta name="author" content="Uddipa Pal">
+
 
 
 body {
